<resources>
    <string name="app_name">TODO_14</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="donut_des">Donuts are glazed and sprinkled with candy.</string>
    <string name="icecream_des">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_des">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order">Order</string>
    <string name="title_activity_order">OrderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name: </string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="note">Note:</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_note">Enter Note</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="some_day_messenger_service">Some day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>

</resources>